--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -8,5 +8,18 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;database=DermascanSystem;uid=sa;pwd=ductung1706@;TrustServerCertificate=True;"
+  },
+  "JwtConfig": {
+    "ValidateIssuer": true,
+    "ValidIssuer": "http://localhost:5000",
+    "ValidateAudience": true,
+    "ValidAudience": "http://localhost:4200",
+    "ValidateLifetime": true,
+    "ValidateIssuerSigningKey": true,
+    "Token": "abcdefghjqkdweqreqoreogfvndgnfdg",
+    "RequireExpirationTime": true,
+    "SaveToken": true,
+    "TokenValidityInMinutes": 5,
+    "RefreshTokenValidityInDays": 3
   }
 }
