update service scan AI

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -21,5 +21,20 @@
     "SaveToken": true,
     "TokenValidityInMinutes": 5,
     "RefreshTokenValidityInDays": 3
+  },
+  "GeminiApi": {
+    "ApiKey": "AIzaSyC7GMnLcwiuntl5YARCIzpA2-EGBAz-Zl8",
+    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/models/"
+  },
+  "Cloudinary": {
+    "CloudName": "dkyqm6vou",
+    "ApiKey": "734462569675828",
+    "ApiSecret": "Q9TZhNB6IYFut-B8eAnce49dcYg"
+  },
+  "Roboflow": {
+    "ApiKey": "sJEmco7BPDqgYW2FoDdF",
+    "ProjectName": "detect-and-classify-object-detection-a5bb2",
+    "Version": "6",
+    "EndPoint": "https://detect.roboflow.com/{project_name}/{version}?api_key={api_key}"
   }
 }
