update save data skin analysic to database

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=DermascanSystem;uid=sa;pwd=ductung1706@;TrustServerCertificate=True;"
+    "DefaultConnection": "server=localhost;database=DermascanSystem;uid=sa;pwd=123;TrustServerCertificate=True;"
   },
   "JwtConfig": {
     "ValidateIssuer": true,
