add payment for user by vietQr

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -36,5 +36,13 @@
     "ProjectName": "detect-and-classify-object-detection-a5bb2",
     "Version": "6",
     "EndPoint": "https://detect.roboflow.com/{project_name}/{version}?api_key={api_key}"
+  },
+  "VietQr": {
+    "accountNo": 1033886287,
+    "accountName": "DERMASCAN SYSTEM",
+    "acqId": 970436,
+    "format": "text",
+    "template": "print",
+    "url": "https://api.vietqr.io/v2/generate"
   }
 }
